add: the way to use mp4 and webM together

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="video/video.html">exercise#1</a></li>
+      <li><a href="video/video.html">Product feature with video</a></li>
     </ul>
   </body>
 </html>
