add: pseudo selector dropdown

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <ul>
       <li><a href="video/video.html">Product feature with video</a></li>
+      <li><a href="dropdown/dropdown.html">simple dropdown</a></li>
     </ul>
   </body>
 </html>
