add: simple loading animation with keyframes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <ul>
       <li><a href="video/video.html">Product feature with video</a></li>
       <li><a href="dropdown/dropdown.html">simple dropdown</a></li>
+      <li>
+        <a href="simpleLoadingAnimation/simpleLoadingAnimation.html"
+          >simple loading animtion</a
+        >
+      </li>
     </ul>
   </body>
 </html>
