add: loading spinner

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           >simple loading animtion</a
         >
       </li>
+      <li>
+        <a href="loadingSpinner/loadingSpinner.html">loading spinner</a>
+      </li>
     </ul>
   </body>
 </html>
