add: text loader

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <li>
         <a href="loadingSpinner/loadingSpinner.html">loading spinner</a>
       </li>
+      <li>
+        <a href="textLoader/textLoader.html">text loader</a>
+      </li>
     </ul>
   </body>
 </html>
