--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <li>
         <a href="textLoader/textLoader.html">text loader</a>
       </li>
+      <li>
+        <a href="buttonLoader/buttonLoader.html">button loader</a>
+      </li>
     </ul>
   </body>
 </html>
