--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>motion-lab</title>
   </head>
   <body>
+    <h1>Motion Lab</h1>
     <ul>
       <li><a href="video/video.html">Product feature with video</a></li>
       <li><a href="dropdown/dropdown.html">simple dropdown</a></li>
@@ -22,6 +23,9 @@
       </li>
       <li>
         <a href="buttonLoader/buttonLoader.html">button loader</a>
+      </li>
+      <li>
+        <a href="hamburgerMenu/hamburgerMenu.html">hamburger menu</a>
       </li>
     </ul>
   </body>
